[gd_scene load_steps=9 format=3 uid="uid://c8tqiwb82r6vx"]

[ext_resource type="Script" path="res://scenes/Parallax/game.gd" id="1_g7l5y"]
[ext_resource type="PackedScene" uid="uid://b5hc3hxgcqcpp" path="res://scenes/player/player.tscn" id="2_7ttje"]
[ext_resource type="Theme" uid="uid://54com4xaym22" path="res://resources/fonts/theme.tres" id="3_28wok"]
[ext_resource type="Texture2D" uid="uid://dm1gpye3281mk" path="res://scenes/ui/mouse-click.png" id="3_fltnf"]
[ext_resource type="Script" path="res://scenes/Parallax/ParallaxBG.gd" id="4_0lrqi"]
[ext_resource type="PackedScene" uid="uid://ydnlysjr5q0s" path="res://scenes/objects/grass/grass.tscn" id="4_b2ge7"]
[ext_resource type="Texture2D" uid="uid://ryk6am7ot26g" path="res://scenes/Parallax/houses.png" id="5_w416y"]
[ext_resource type="PackedScene" uid="uid://c17pbnqofmkgw" path="res://scenes/day_night_cycle/day_night.tscn" id="6_fmq6m"]

[node name="Game" type="Node2D"]
script = ExtResource("1_g7l5y")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -49.0
offset_right = 450.0
offset_bottom = 798.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="GameStartUI" type="Control" parent="UI"]
anchors_preset = 0
offset_left = -1.0
offset_top = 430.0
offset_right = 500.0
offset_bottom = 799.0

[node name="PressClickToStartLabel" type="Label" parent="UI/GameStartUI"]
layout_mode = 2
offset_left = 27.0
offset_top = -149.0
offset_right = 479.0
offset_bottom = -115.0
theme = ExtResource("3_28wok")
text = "Press left click to start!"
horizontal_alignment = 1

[node name="MouseImage" type="TextureRect" parent="UI/GameStartUI"]
layout_mode = 2
offset_left = 226.0
offset_top = -96.0
offset_right = 276.0
offset_bottom = -46.0
texture = ExtResource("3_fltnf")
expand_mode = 4

[node name="ParallaxBG" type="Node2D" parent="."]
z_index = -2
script = ExtResource("4_0lrqi")

[node name="Clouds" type="Node2D" parent="ParallaxBG"]
position = Vector2(625, -1)
metadata/_edit_lock_ = true

[node name="GrassNode" type="Node2D" parent="ParallaxBG"]

[node name="Grass" parent="ParallaxBG/GrassNode" instance=ExtResource("4_b2ge7")]
position = Vector2(251, 790)

[node name="Grass2" parent="ParallaxBG/GrassNode" instance=ExtResource("4_b2ge7")]
position = Vector2(851, 790)

[node name="HousesNode" type="Node2D" parent="ParallaxBG"]

[node name="Houses" type="Sprite2D" parent="ParallaxBG/HousesNode"]
z_index = -1
position = Vector2(223, 310)
texture = ExtResource("5_w416y")

[node name="Houses2" type="Sprite2D" parent="ParallaxBG/HousesNode"]
z_index = -1
position = Vector2(820, 310)
texture = ExtResource("5_w416y")

[node name="Pilars" type="Node2D" parent="ParallaxBG"]
position = Vector2(500, 0)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_7ttje")]
z_index = 1
position = Vector2(70, 400)
collision_mask = 9
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(130, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="Player/Camera2D"]
offset_left = -120.0
offset_top = -306.0
offset_right = 380.0
offset_bottom = 368.0
theme = ExtResource("3_28wok")

[node name="CurrentScoreText" type="Label" parent="Player/Camera2D/VBoxContainer"]
layout_mode = 2
text = "Current Score"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Player/Camera2D/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="CanvasLayer" parent="Player" instance=ExtResource("6_fmq6m")]
layer = -2

[node name="Timers" type="Node" parent="."]

[node name="PilarSpawn" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="CloudSpawn" type="Timer" parent="Timers"]
wait_time = 1.75

[connection signal="game_started" from="." to="ParallaxBG" method="_on_game_game_started"]
[connection signal="timeout" from="Timers/PilarSpawn" to="ParallaxBG" method="_on_pilar_spawn_timeout"]
[connection signal="timeout" from="Timers/CloudSpawn" to="ParallaxBG" method="_on_cloud_spawn_timeout"]
